fixed the issue related to the wrap on the about me page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ nav {
     justify-content: space-between;
     background-color: var(--dark-back-c);
     display:flex;
+    flex-wrap: wrap;
     align-items: center;
     padding-top: 40px;
     padding-right: 5%;
@@ -69,7 +70,9 @@ nav ul li a{
     font-weight: bold;
 }
 /*---------------------------------------------------------------------------------*/
-
+.mp .main-card{
+    border:2px solid white;
+}
 .my-name{
     position:absolute;
     top: 50%;
@@ -144,12 +147,14 @@ form{
 
 .body-am{
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
     margin-top: 2%;
     margin-left: 5%;
     margin-bottom:5% ;
     margin-left: 2;
+    border: 5px solid white;
     /*
     width:1000px;
     max-width: 95%;
